few minor changes, playing with bootstrap

--- a/test.html
+++ b/test.html
@@ -49,12 +49,19 @@
       </nav>
     </header>
 
-      <div class="jumbotron text-center">
-        <h1><i>Atlantic Transfer</i></h1>
-        <p>Serving Those Who Serve</p>
-      </div>
+    <div class="container-fluid">
       <div class="row" id="carousel">
-        <div id="slider" class="carousel slide col-md-6 col-md-offset-3" data-ride="carousel">
+        <div class="col-md-3" id="info">
+          <div>
+          We proudly serklajdl;j.  alsdkjf;ladjf;lk j. aas;ljs;dlkj;alj dlja. ;alkdj;lkj ;akld;.
+          akjd;kjaf;sdlkj. aajd;lkaj;dl jlasj;lakj ;ldaskj ;lkaj;dlkja;lskdj;alkja d;lhagiwpoh;knciuhg  pn;
+          aiudhpqwj nanpiquhepjansdkjhpiqn kajhpigqhpna;skdhgp  iqh nx,mn[qowh pian
+          aipsueh pw nalknpiuqhwp jgdn;dk aghq ;nkdj;lkajd;akshd;kjasdhg;ashd;kdgasj;gla
+          asdlkjghaksdhg;laksjdg;laksjd;glkjas;ldkghas;lj
+          asd'gkha;skdghj;asdhg;asjgdhas;dh]
+          </div>
+        </div>
+        <div id="slider" class="carousel slide col-md-6" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#slider" data-slide-to="0" class="active"></li>
             <li data-target="#slider" data-slide-to="1"></li>
@@ -94,42 +101,16 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-      </div>
-
-      <section id="contact" class="content-section text-center">
-        <div class="contact-section col-md-12">
-            <div class="container">
-              <h2>Contact Us</h2>
-              <p>Please feel free to contact us for an estimate or any other inquiries!</p>
-              <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                  <form class="form-horizontal">
-                    <div class="form-group">
-                      <label for="exampleInputName2">Name</label>
-                      <input type="text" class="form-control" id="exampleInputName2" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputEmail2">Email</label>
-                      <input type="email" class="form-control" id="exampleInputEmail2" placeholder="email">
-                    </div>
-                    <div class="form-group ">
-                      <label for="exampleInputText">Your Message</label>
-                     <textarea  class="form-control" placeholder="Description"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-default">Send Message</button>
-                  </form>
-
-                  <hr>
-                    <h3>Visit Us On</h3>
-                  <ul class="list-inline banner-social-buttons">
-                    <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+        <div class="col-md-3 contact">
+        <p>Call us at </p><br>
+        <p>Location: 2039 39u203</p>
         </div>
-      </section>
-
-      <footer><span>&copy </span>Copyright 2017 Atlantic Transfer Inc.</footer>
+      </div>
+    </div>
+    <footer class="navbar navbar-fixed-bottom">
+      <div>
+       Contact us at
+      </div>
+    </footer>
   </body>
 </html>
